# wireguard-ui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.debug.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  requirements-dev.txt  requirements.txt  skills-lock.json  workspace.code-workspace
.agents/skills/angular-developer/: SKILL.md
.agents/skills/development-standards/: SKILL.md
.agents/skills/fastapi/: SKILL.md
.agents/skills/sqlmodel/: SKILL.md
.agents/skills/sqlmodel-expert/: SKILL.md
.claude/agents/: fastapi-prod.md
.claude/rules/: copilot-instructions.md
.claude/skills/: development-standards  fastapi  sqlmodel
.claude/skills/development-standards/: SKILL.md
.claude/skills/fastapi-api-template/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  pyproject.toml
.devcontainer/scripts/: install-system-deps.sh  post-create.sh
.github/workflows/: ci.yml  clear-cache.yml  codeql-analysis.yml  create-release.yml  dependency-automerge.yml  docker-publish.yml
app/: __init__.py  config.py  utils.py
app/apis/: __init__.py  base.py  models.py  system.py  wg.py
app/blueprints/: __init__.py  api.py  base.py  main.py  user.py
app/custom/css/: custom.css
app/custom/js/: custom.js  login.js
app/forms/: forms.py  validators.py  wtforms_button.py
app/helpers/: utils.py  wireguard.py
app/models/: __init__.py  clients.py  global_settings.py  security_too.py  server.py  setting.py  utils.py  wireguard.py
app/resources/css/: custom.css
app/resources/js/: custom.js  libs.js  login.js
app/routes/: api.py  main.py  user.py
app/services/: __init__.py  admin.py  assets.py  base.py  email.py  handle.py  token.py
app/templates/: _macros.html  administration.html  base.html  base_modals.html  base_toast.html  blank.html  clients.html  clients_modals.html  flash_message.html  footer.html  modal_new_client.html  modal_service.html  navbar.html  profile.html  profile_adv.html  profile_authenticate.html  profile_password.html  profile_user.html  profile_wan_register.html  server.html  settings.html  sidebar.html  status.html  theme_colors.html  toast.html  wg0.conf  wg0_client.conf
app/templates/admin/: actions.html  lib.html
app/templates/email/: account_configuration.html
app/templates/errors/: 400.html  403.html  404.html  500.html
app/templates/security/: _messages.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html  two_factor_verify_code.html  verify.html
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_split_settings_tables.py  003_auth_source.py
backend/app/: auth.py  config.py  database.py  exceptions.py  helpers.py  main.py  models.py  proxy.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  clients.py  oidc.py  server.py  settings.py  smtp.py  status.py  users.py
backend/app/services/: auth.py  email.py  ip_suggestion.py  oidc.py  ratelimit.py  seed.py  settings.py  smtp.py  users.py  wireguard.py
backend/app/static/swagger/: VERSION  swagger-ui-bundle.js  swagger-ui.css  swagger-ui.css.map
backend/app/templates/: client_config_en.html  client_config_es.html  client_config_fr.html
backend/src/: auth.py  config.py  main.py  models.py  schemas.py  security.py
backend/src/routers/: __init__.py  auth.py  clients.py  mail.py  oidc.py  server.py  settings.py  smtp.py  users.py
backend/src/services/: email.py  ip_suggestion.py  qr.py  wireguard.py
backend/src/templates/: client_config_es.html
docker/: entrypoint.sh  supervisord.conf
example/: docker-compose.yml  site.conf
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.css
migrations/versions/: 6c9060db3198_update_password_length.py  8c65941b01c3_initialize_database.py  8ddd237ecdd6_add_column_fs_webauthn_user_handle.py  c7d89d28d3e3_initialize_database.py  fe12a01cf64a_remove_unique_id_into_roles_uses_table.py
scripts/: release.sh
(+91 files in other folders)
