[project]
name = "app"
version = "0.1.0"
description = "My Project"
requires-python = ">=3.14"

dependencies = [
    # FastAPI + ASGI server
    "fastapi[standard]==0.135.2",
    "pydantic[email]",
    "pydantic-settings",
    # Async database
    "sqlmodel==0.0.37",
    "sqlalchemy[asyncio]",
    "alembic",
    # Auth / Security
    "python-jose[cryptography]",
    "python-multipart",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi-mail>=1.6.2",
    "qrcode>=8.2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools]
packages = ["backend"]

# ── Ruff (linter PEP8) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Ruff — format ────────────────────────────────────────────────────────────
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (type checking) ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
